# packages/Webkul/Admin/src/Resources/views/leads/view.blade.php
@@ -112,7 +112,7 @@
                         <span class="font-semibold text-gray-800 dark:text-white">Diagnoseformulier</span>
 
                         <span class="text-xs {{ ($lead->has_diagnosis_form ?? false) ? 'text-green-600' : 'text-red-600' }}">
-                            <a href="{{ ($lead->diagnose_download_url ?? '') }}" target="_blank">Download</a>
+                            <a href="{{ ($lead->diagnoseform_pdf_url ?? '') }}" target="_blank">Download website</a> | <a href="{{ ($lead->diagnose_download_url ?? '') }}" target="_blank">Download interne</a>
                         </span>
                     </div>
                 </div>
